CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3h
------------
* Fixed a massive myriad of miscellaneous misspellings and mistakes.
* Fera should now be able to take your second cock if your first one is too big.
* New cats loss scene (PC fucks pussy)

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3g
------------
* Fixed minor bug in drake AI
* Added the next stage in the main quest, approaching the court mage's tower
* Added three win scenes to the wildcat encounters. Much more to come
 - Added a loss scene, written by QB and LD
 - Added variations of cats (puma, jaguar, lynx)
* Added some dream sequences, triggered when you sleep
* Huge batch of Miranda:
 - Gates interactions
 - Hateful love: A legit way of getting into Rigard (requiring you to become a complete slut)
 - Dating: Another legit way of getting into Rigard (only some times requiring you to become a complete slut)

Version 0.3f2
-------------
* Fixed a bug with disabled buttons not rendering properly.
* Removed text selections on the buttons (it is still technically possible, but not by pressing/dragging on the buttons)
* Changed the default button font to Impact and added a black outline for readability.
* Known GUI bugs:
 - Toggle pictures option doesn't do anything.
 - Toggle key shortcuts doesn't do anything.

Version 0.3f
------------
* Complete rewrite of the Graphical User Interface, based on Raphael.js (a wrapper around SVG). Still a few kinks left to work out with it, especially testing browser compatability.
* Known GUI bugs:
 - Button flicker in Chrome (works in firefox).
 - Slight lag at start of combat when old sprites might show up.

Version 0.3e
------------
* Added an ugly fallback solution for save to file not working offline (save to text button in data menu)