@@ -9,6 +9,7 @@ Version 0.3h
 ------------
 * Fixed a massive myriad of miscellaneous misspellings and mistakes.
 * Fera should now be able to take your second cock if your first one is too big.
+* Danie got the same treatment.
 * New cats loss scene (PC fucks pussy)
 
 --------------------------------------------
